syntax = "proto3";
package ubii.topicData;

import "proto/topicData/timestamp.proto";
import "proto/dataStructure/lists.proto";
import "proto/dataStructure/vector2.proto";
import "proto/dataStructure/vector3.proto";
import "proto/dataStructure/vector4.proto";
import "proto/dataStructure/quaternion.proto";
import "proto/dataStructure/matrix3x2.proto";
import "proto/dataStructure/matrix4x4.proto";
import "proto/dataStructure/color.proto";
import "proto/dataStructure/touchEvent.proto";
import "proto/dataStructure/keyEvent.proto";
import "proto/dataStructure/mouseEvent.proto";
import "proto/dataStructure/myoEvent.proto";
import "proto/dataStructure/pose2d.proto";
import "proto/dataStructure/pose3d.proto";
import "proto/dataStructure/object2d.proto";
import "proto/dataStructure/object3d.proto";
import "proto/dataStructure/image.proto";

import "proto/sessions/session.proto";
import "proto/processing/processingModule.proto";

// continuous index: 38
message TopicDataRecord {
    string topic = 1;
    ubii.topicData.Timestamp timestamp = 2;
    string client_id = 33;
    oneof type {
        double double = 3;
        bool bool = 4;
        string string = 5;
        int32 int32 = 23;
        float float = 24;
        ubii.dataStructure.Vector2 vector2 = 6;
        ubii.dataStructure.Vector2List vector2_list = 35;
        ubii.dataStructure.Vector3 vector3 = 7;
        ubii.dataStructure.Vector3List vector3_list = 36;
        ubii.dataStructure.Vector4 vector4 = 8;
        ubii.dataStructure.Vector4List vector4_list = 37;
        ubii.dataStructure.Quaternion quaternion = 9;
        ubii.dataStructure.Quaternion quaternion_list = 38;
        ubii.dataStructure.Matrix3x2 matrix3x2 = 10;
        ubii.dataStructure.Matrix4x4 matrix4x4 = 11;
        ubii.dataStructure.Color color = 12;
        ubii.dataStructure.TouchEvent touch_event = 13;
        ubii.dataStructure.TouchEventList touch_event_list = 34;
        ubii.dataStructure.KeyEvent key_event = 14;
        ubii.dataStructure.MouseEvent mouse_event = 15;
        ubii.dataStructure.MyoEvent myo_event = 16;
        ubii.dataStructure.Pose2D pose2D = 17;
        ubii.dataStructure.Pose3D pose3D = 18;
        ubii.dataStructure.Object2D object2D = 19;
        ubii.dataStructure.Object3D object3D = 20;
        ubii.dataStructure.Object2DList object2D_list = 21;
        ubii.dataStructure.Object3DList object3D_list = 22;
        ubii.dataStructure.Int32List int32_list = 25;
        ubii.dataStructure.FloatList float_list = 26;
        ubii.dataStructure.DoubleList double_list = 27;
        ubii.dataStructure.StringList string_list = 28;
        ubii.dataStructure.BoolList bool_list = 29;
        ubii.dataStructure.Image2D image2D = 30;
        ubii.dataStructure.Image2DList image2D_list = 31;
        ubii.sessions.Session session = 32;
    }    
}

message TopicDataRecordList {
    repeated ubii.topicData.TopicDataRecord elements = 1;
}